--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,10 +13,13 @@ jobs:
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
+    - run:
+          name: Build the jekyll site
+          command:bundle exec jekyll build
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: build dependencies
+          command: bundle install
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
