--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,10 @@ jobs:
        - run:
           name: Build the jekyll site
           command:bundle exec jekyll build
+          
+      - run:
+          name: Print current time
+          command:date
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
