--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,19 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
+jobs: 
+  docker: 
+    - 
+      image: "circleci/ruby:2.4.1-node-browsers"
+  steps: 
+    - checkout
+    - 
+      run: 
+        command: "bundle install"
+        name: "build dependencies"
+    - 
+      run: 
+        command: "build jekyll site"
+        name: "build exec jekyll build"
+    - 
+      run: 
+        command: date
+        name: "Print date"
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
-jobs:
-  build:
-    docker:
-      - image: circleci/ruby:2.4.1-node-browsers
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
-    steps:
-      - checkout
-      
-      - run:
-          name: build dependencies
-          command: bundle install
-          
-       - run:
-          name: Build the jekyll site
-          command:bundle exec jekyll build
-          
-      - run:
-          name: Print current time
-          command:date
-
