--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "build dependencies"
+          command: "bundle install"
   say-bye:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
@@ -27,8 +27,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say bye"
-          command: "echo bye, World!"
+          name: "build the jekyll site"
+          command: "bundle exec jekyll build"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
