--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/company-logo.png?raw=true"
 description: >
   Find Us!
   <br><br>
-  60 State Street
+  60 State Streets
   Suite 800
   Boston, MA 02109
   <br><br>
