--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Wired Brain Coffee
 logo: "/images/company-logo.png?raw=true"
 description: >
-  Find Us!
+  Find Us! Best Coffee in Town
   <br><br>
   60 State Streets
   Suite 800
